--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -6,8 +6,6 @@ homepage:
   url:   /
   param: { module: default, action: index }
 
-# generic rules
-# please, remove them by adding more specific rules
 default_index:
   url:   /:module
   param: { action: index }
@@ -15,3 +13,20 @@ default_index:
 default:
   url:   /:module/:action/*
 
+job_show_user:
+  url:     /job/:company_slug/:location_slug/:id/:position_slug
+  class:   sfDoctrineRoute
+  options:
+    model: JobeetJob
+    type:  object
+    method_for_query: retrieveActiveJob
+  param:   { module: job, action: show }
+  requirements:
+    id: \d+
+    sf_method: [GET]
+
+category:
+  url:      /category/:slug
+  class:    sfDoctrineRoute
+  param:    { module: category, action: show }
+  options:  { model: JobeetCategory, type: object }
