--- a/data/fixtures/jobs.yml
+++ b/data/fixtures/jobs.yml
@@ -49,7 +49,7 @@ JobeetJob:
     
 <?php for ($i = 100; $i <= 130; $i++): ?>
   job_<?php echo $i ?>:
-    JobeetCategory: programming
+    JobeetCategory: design
     company:      Company <?php echo $i."\n" ?>
     position:     Web Developer
     location:     Paris, France
@@ -62,5 +62,4 @@ JobeetJob:
     email:        job@example.com
     expires_at:   '2016-10-10'
     created_at:   '2016-02-10'
- 
 <?php endfor ?>
